lab1/Test/L1-A-13-87.output
Error Type B at Line 4
Error Type B at Line 8
Error Type A at Line 11
Error Type A at Line 16
Error Type B at Line 28
Error Type A at Line 29
Error Type B at Line 38
