lab1/Test/L1-A-13-87.cmm
int HDtsZm7 
;
struct qI4PUJKN 
int Q_aky0UWSp ( int PSZ6EeZ6G2DpZZaH ) {
  int T3FEeGV6yYVYOkp0lm ;
  struct FLpShVtOpMgHU {
    struct XTdsG_N Zn36up ;
  }, CSNT9tYV_8j8a_ , MYd_4TdfGNUO = Mebpt0KY5 ;
}
struct {
}cSXfELFMCsp4Re ( %) {
  float o3_ODz19OsGzwt81kD5v [ 872700818 ] ;
  if ( CzlL ) {
  }else   if ( yr )   while ( f9eRDE2W4aj )   return 
    BqUoFC4pkEtOaaNgiJ || SpZOTk2tUTOAY3Lpu - VkVPQ ( 
    pjv_aLUmYZriKLuM , `TAgOJKyR = WdEDb4r4r && u3qXsPcX0xqt3 
    != MvYrxu + d2iA6JHbgsJaaMn * - ! ( wqPjK17GplF_ = 
    G || umVeWvSQMX6hE2JBc && pQqQDTdv5z < _yinQ7KHxWya 
    / YDMYr [ ZhR2xyolVaB || WbaJL && fiNPHy > rzC_mQjyIcb6bNcE1m 
    - LC2hYoun23OB / 849956174.771771534 == HNcr >= 167771479 
    <= ehyoH34GUqHa9y6Sl0 ( ) ] . LrFI ) ) ;



}
int ;
int G395 ( ) {
  bgIf2_l2EUT > ;
&  x3mze5oLWHec_wb ;
  fAstfw ;
  if ( gj_ )   JXyLlohtJ7zFa4g ;
else   g64lEmE_a ;

}
int LUMg54om1ZLnAwvseLP , ci2Tqz5lrqumuOZ 


int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int jYsnBy ( ) {
}
int ;
int xwe6JwaA3 ( int QqU1Nn6T7ze9eA , int KqUwJwdgI 
  ) {
}
